People API lista. Mejora del estandar de codificación del CRUD para las dos entidades actuales.
